<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activity.student.StudentSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/textView_heading_sign_up"
            style="@style/textViewHeadingStyle" />

        <EditText
            android:id="@+id/input_signUp_name"
            style="@style/editTextStyle"
            android:hint="@string/editText_hint_name"
            android:inputType="textPersonName"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/input_signUp_email"
            style="@style/editTextStyle"
            android:hint="@string/editText_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_signUp_mobile"
            style="@style/editTextStyle"
            android:hint="@string/editText_hint_mobile_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/input_signUp_username"
            style="@style/editTextStyle"
            android:hint="@string/editText_hint_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/input_signUp_password"
            style="@style/editTextStyle"
            android:hint="@string/editText_hint_password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/button_signup"
            style="@style/button_style"
            android:text="@string/button_create_account"
            android:onClick="signUp"
            />

        <TextView
            android:id="@+id/link_login"
            style="@style/textView_hint_bottom"
            android:onClick="goToLoginActivity"
            android:text="@string/textView_member_login" />

    </LinearLayout>


</ScrollView>