<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activity.LoginActivity">

    <TextView
        style="@style/textViewHeadingStyle"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/textView_heading_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_login_username"
            style="@style/editTextStyle"
            android:hint="@string/editText_hint_email"
            android:inputType="text" />


        <EditText
            android:id="@+id/input_login_password"
            style="@style/editTextStyle"
            android:hint="@string/editText_hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttton_login"
            style="@style/button_style"
            android:onClick="login"
            android:text="@string/button_login" />

        <TextView
            android:id="@+id/link_signup"
            style="@style/textView_hint_bottom"
            android:onClick="goToSignupActivity"
            android:text="@string/textView_create_account" />

    </LinearLayout>

</RelativeLayout>